# Quiz-2-Progra

PatronDecorador-Ejemplo-main/: CMakeLists.txt
PatronDecorador-Ejemplo-main/PatronDecorador-Ejemplo-main/PatronDecorator/: CMakeLists.txt  Calzone.h  CalzoneSimple.cpp  CalzoneSimple.h  DecoradorCalzone.cpp  DecoradorCalzone.h  DecoradorPizza.cpp  DecoradorPizza.h  Peperoni.cpp  Peperoni.h  Pizza.h  Queso.cpp  Queso.h  SalamiQuesoTomate.cpp  SalamiQuesoTomate.h  Suprema.cpp  Suprema.h  TocinoHongos.cpp  TocinoHongos.h  main.cpp
